--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1></h1>
-<p>
-Privacy Policy
-Your privacy and safety is the upmost important issue for us. We created our Privacy Policy to make important disclosures about how you use Bolide Mobile to capture, view, and store video, share with others, and how we collect and may use the personally identifiable information ("Personal Information") and videos or anything you or other Users post on Bolide Mobile that would not be included in the definition of Personal Information. ("Content") you enter on our Services. 
-The Bolide Mobile team has built a sophisticated and easy-to-use video home monitoring system through your smartphone. We will not request for your personal information unless we are obligated to do so. We will not share or store any personal information unless required for the operation or the programming, by laws, or to conduct product development. We are committed to providing you with transparency into our privacy practices and control over your data in connection with the Services.
+<h1>Privacy Policy</h1>
+<p>Your privacy and safety is the upmost important issue for us. We created our Privacy Policy to make important disclosures about how you use Bolide Mobile to capture, view, and store video, share with others, and how we collect and may use the personally identifiable information ("Personal Information") and videos or anything you or other Users post on Bolide Mobile that would not be included in the definition of Personal Information. ("Content") you enter on our Services. 
+The Bolide Mobile team has built a sophisticated and easy-to-use video home monitoring system through your smartphone. We will not request for your personal information unless we are obligated to do so. We will not share or store any personal information unless required for the operation or the programming, by laws, or to conduct product development. We are committed to providing you with transparency into our privacy practices and control over your data in connection with the Services.</p>
  
-Personal Information and Content
+ <h1>Personal Information and Content</h1>
  
-We receive and store any Personal Information and Content you enter or upload to our Services. The types of Personal Information and Content collected may include, but are not limited to:
-•    Camera locations and names, that you are asked to enter and may change at any time.
-•    Video and audio signals and data are recorded and processed, depending on how you may have configured your Services. This may include Bolide Mobile sending you portions of the Content as part of a notification, or analyzing the data to identify motion or other events. If you have recording features enabled, we will capture, process and retain video and audio recordings from your device, of which you will be able to access, for the duration of your recording subscription period.
-•    You may save and choose to share Content for others to access using the Services. We will collect and store information required for us to save or share your Content.
-•    We may also draw upon this Personal Information and Content in order to modify and customize the Services to better suit your needs, to improve the effectiveness of our network and Services, and to develop new tools to enhance usability and security. Under no circumstance will any employee or agent of Bolide Mobile ever look at your private videos within your account unless given express consent to do so.
+<p>We receive and store any Personal Information and Content you enter or upload to our Services. The types of Personal Information and Content collected may include, but are not limited to:</p>
+<p>•    Camera locations and names, that you are asked to enter and may change at any time.</p>
+<p>•    Video and audio signals and data are recorded and processed, depending on how you may have configured your Services. This may include Bolide Mobile sending you portions of the Content as part of a notification, or analyzing the data to identify motion or other events. If you have recording features enabled, we will capture, process and retain video and audio recordings from your device, of which you will be able to access, for the duration of your recording subscription period.</p>
+<p>•    You may save and choose to share Content for others to access using the Services. We will collect and store information required for us to save or share your Content.</p>
+<p>•    We may also draw upon this Personal Information and Content in order to modify and customize the Services to better suit your needs, to improve the effectiveness of our network and Services, and to develop new tools to enhance usability and security. Under no circumstance will any employee or agent of Bolide Mobile ever look at your private videos within your account unless given express consent to do so.</p>
  
-Information we receive from third parties and Cookies
+ <h1>Information we receive from third parties and Cookies</h1>
  
-We may receive and store information from third parties that interact with the Services or that provide services to us in connection with our operation and the Services, mostly to collect data and monitor application usage and performance. Bolide Mobile will provide your Personal Information to these 3rd party Services solely for the purposes noted above. In addition, you may choose to use third party apps that share with Bolide Mobile the Personal Information, activities and/or content you provide to those third party apps. In such case, we would like to remind you to please read the privacy policy of any such app so that you understand its sharing practices. We will also use cookies to identify each user.
+<p>We may receive and store information from third parties that interact with the Services or that provide services to us in connection with our operation and the Services, mostly to collect data and monitor application usage and performance. Bolide Mobile will provide your Personal Information to these 3rd party Services solely for the purposes noted above. In addition, you may choose to use third party apps that share with Bolide Mobile the Personal Information, activities and/or content you provide to those third party apps. In such case, we would like to remind you to please read the privacy policy of any such app so that you understand its sharing practices. We will also use cookies to identify each user.</p>
  
-You Are Always In Control
+ <h1>You Are Always In Control</h1>
  
-We assure you that you are the sole person who may choose to share your Personal Information. We neither rent nor sell your Personal Information to anyone, though we may provide aggregate, non- personally identifiable information to our partners. The default setting for all Personal Information and Content is to make that information visible only to others in the private groups you create or join on Bolide Mobile. You may modify that setting as part of the Services. Bolide Mobile may only share your Personal Information and Content only as described in this Privacy Policy, except for when required by law or applicable authorities to release the information.
+<p>We assure you that you are the sole person who may choose to share your Personal Information. We neither rent nor sell your Personal Information to anyone, though we may provide aggregate, non- personally identifiable information to our partners. The default setting for all Personal Information and Content is to make that information visible only to others in the private groups you create or join on Bolide Mobile. You may modify that setting as part of the Services. Bolide Mobile may only share your Personal Information and Content only as described in this Privacy Policy, except for when required by law or applicable authorities to release the information.</p>
  
-Is Personal Information About Me Secure?
+<h1>Is Personal Information About Me Secure?</h1>
  
-Your Personal Information is protected on Bolide Mobile by your username and password. We highly recommend that you select and protect your password appropriately, and limit access to your computer and mobile phone to only those individuals whom you trust to prevent unauthorized access to your account and to your Personal Information and Content. Bolide Mobile endeavors to safeguard Personal Information and Content to ensure that information is kept private, through physical, electronic, and procedural measures.
+<p>Your Personal Information is protected on Bolide Mobile by your username and password. We highly recommend that you select and protect your password appropriately, and limit access to your computer and mobile phone to only those individuals whom you trust to prevent unauthorized access to your account and to your Personal Information and Content. Bolide Mobile endeavors to safeguard Personal Information and Content to ensure that information is kept private, through physical, electronic, and procedural measures.</p>
  
  
-Updating this statement
+ <h1>Updating this statement</h1>
  
-Bolide Mobile may update this privacy policy by posting a new version on this website. 
-You should check this page occasionally to ensure you are familiar with any changes.
+<p>Bolide Mobile may update this privacy policy by posting a new version on this website. 
+You should check this page occasionally to ensure you are familiar with any changes.</p>
 
 </p>
 </body>
