--- a/iot_privacy_policy_2.html
+++ b/iot_privacy_policy_2.html
@@ -248,7 +248,7 @@ security protection. Please keep your username and password information
 safe.&nbsp;This application will ensure that your information is not lost, not
 abused or altered, by security measures such as encrypting user
 passwords.&nbsp;Despite the aforementioned security measures, please also note
-that there are no “perfect security measures” on the information network.</span></p>
+that there are no Â“perfect security measuresÂ” on the information network.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-size:13.5pt;
 font-family:"Arial",sans-serif;color:#666666'>(b) When using this application
