--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <p> BTG IOT Mobile Privacy Policy </p>
-<p> Effective Date: 2021-06-21
-BTG IOT Inc., its affiliates and subsidiaries (“we”, “us”, “our”, “BTG IOT”) are committed to protecting your privacy. This Privacy Policy (“Policy”) describes our practices in connection with information privacy on Personal Data we process through your individual use of the following services, products, and related mobile applications (collectively, the “Products”): </p>
+<p> Effective Date: 2021-06-21 </p>
+<p> BTG IOT Inc., its affiliates and subsidiaries (“we”, “us”, “our”, “BTG IOT”) are committed to protecting your privacy. This Privacy Policy (“Policy”) describes our practices in connection with information privacy on Personal Data we process through your individual use of the following services, products, and related mobile applications (collectively, the “Products”): </p>
 • BTG IOT Smart Mobile Application
 • Smart Life Mobile Application
 In this Privacy Policy, “Personal Data” means information that can be used to identify an individual, either from that information alone, or from that information and other information we have access to about that individual. “Smart Devices” refers to those nonstandard computing devices produced or manufactured by hardware manufacturers, with human-machine interface and the ability to transmit data that connect wirelessly to a network, including: smart home appliances, smart wearable devices, smart air cleaning devices, etc. “Apps” refers to those mobile applications developed by BTG IOT that provide end users remote control to Smart Devices and with the ability to connect to BTG IOT IoT Platform.
