--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <p> BTG IOT Mobile Privacy Policy </p>
 <p> Effective Date: 2021-06-21 </p>
-<p> BTG IOT Inc., its affiliates and subsidiaries (“we”, “us”, “our”, “BTG IOT”) are committed to protecting your privacy. This Privacy Policy (“Policy”) describes our practices in connection with information privacy on Personal Data we process through your individual use of the following services, products, and related mobile applications (collectively, the “Products”):
-  • BTG IOT Smart Mobile Application </p>
+<p> BTG IOT Inc., its affiliates and subsidiaries (“we”, “us”, “our”, “BTG IOT”) are committed to protecting your privacy. This Privacy Policy (“Policy”) describes our practices in connection with information privacy on Personal Data we process through your individual use of the following services, products, and related mobile applications (collectively, the “Products”): </p>
+<p>  • BTG IOT Smart Mobile Application </p>
 
 <p> In this Privacy Policy, “Personal Data” means information that can be used to identify an individual, either from that information alone, or from that information and other information we have access to about that individual. “Smart Devices” refers to those nonstandard computing devices produced or manufactured by hardware manufacturers, with human-machine interface and the ability to transmit data that connect wirelessly to a network, including: smart home appliances, smart wearable devices, smart air cleaning devices, etc. “Apps” refers to those mobile applications developed by BTG IOT that provide end users remote control to Smart Devices and with the ability to connect to BTG IOT IoT Platform.
 For other branded mobile applications powered by BTG IOT, our Clients control all the Personal Data collected through our Products. We collect the information under the direction of our Clients and the processing of such information shall be limited to the purpose of providing the service for which our Clients has engaged us. If you are a customer of one of our Clients and would no longer like to be contacted by one of our Clients that use our service, please contact the Client that you interact with directly. </p>
 
-<p> What Personal Data do We Collect.
-In order to provide our services to you, we will ask you to provide necessary Personal Data that is required to provide those services. If you do not provide your Personal Data, we may not be able to provide you with our products or services.
+<p> What Personal Data do We Collect. </p>
+<p> In order to provide our services to you, we will ask you to provide necessary Personal Data that is required to provide those services. If you do not provide your Personal Data, we may not be able to provide you with our products or services.
 1. Information You Voluntarily Provide Us
 • Account or Profile Data: When you register an account with us, we may collect your name and contact details, such as your email address, phone number, user name, and login credentials. During your interaction with our Products, we may further collect your nickname, profile picture, country code, language preference or time zone information into your account.
 • Feedback: When using feedback and suggestion features in our Products, we will collect your email address, mobile phone number and your feedback content to address your problems and solve device failures on a timely basis.
