--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
 For other branded mobile applications powered by BTG IOT, our Clients control all the Personal Data collected through our Products. We collect the information under the direction of our Clients and the processing of such information shall be limited to the purpose of providing the service for which our Clients has engaged us. If you are a customer of one of our Clients and would no longer like to be contacted by one of our Clients that use our service, please contact the Client that you interact with directly. </p>
 
 <p> What Personal Data do We Collect. <br>
-In order to provide our services to you, we will ask you to provide necessary Personal Data that is required to provide those services. If you do not provide your Personal Data, we may not be able to provide you with our products or services.
-1. Information You Voluntarily Provide Us
+In order to provide our services to you, we will ask you to provide necessary Personal Data that is required to provide those services. If you do not provide your Personal Data, we may not be able to provide you with our products or services. <br>
+1. Information You Voluntarily Provide Us <br>
 • Account or Profile Data: When you register an account with us, we may collect your name and contact details, such as your email address, phone number, user name, and login credentials. During your interaction with our Products, we may further collect your nickname, profile picture, country code, language preference or time zone information into your account.
 • Feedback: When using feedback and suggestion features in our Products, we will collect your email address, mobile phone number and your feedback content to address your problems and solve device failures on a timely basis.
 2. Information We Collect Automatically
