--- a/test.html
+++ b/test.html
@@ -31,47 +31,46 @@ The purpose for which we may process information about you are as follows:
 • Personalization: We may process your account and profile data, usage data, device information to personalize product design and to provide you with services tailored for you, such as recommending and displaying information and advertisements regarding products suited to you, and to invite you to participate in surveys relating to your use of our Products. The legal basis for this processing is your consent.
 • Legal Compliance: We may process your Personal Data as we believe to be necessary or appropriate: (a) to comply with applicable laws and regulations; (b) to comply with legal process; (c) to respond to requests from public and government authorities (d) to enforce our terms and conditions; (e) to protect our operations, business and systems; (f) to protect our rights, privacy, safety or property, and/or that of other users, including you; and (g) to allow us to pursue available remedies or limit the damages that we may sustain. </p>
 
-<p> Who do We Share Personal Data with?
-At BTG IOT, we only share Personal Data in ways that we tell you about. We may share your Personal Data with the following recipients:
-• To our third-party service providers who perform certain business-related functions for us, such as website hosting, data analysis, payment and credit card processing, infrastructure provision, IT services, customer support service, e-mail delivery services, and other similar services to enable them to provide services to us.
-• To our customers and other business partners who provide you, directly or indirectly, with your Smart Devices, and/or networks and systems through which you access and use our Sites and Services.
-• To an affiliate or other third party in the event of any reorganization, merger, sale, joint venture, assignment, transfer or other disposition of all or any portion of our business, assets or stock (including without limitation in connection with any bankruptcy or similar proceedings). In such an event, you will be notified via email and/or a prominent notice on our website of any change in ownership, incompatible new uses of your Personal Data, and choices you may have regarding your Personal Data.
-• As we believe to be necessary or appropriate: (a) to comply with applicable laws and regulations; (b) to comply with legal process; (c) to respond to requests from public and government authorities, including public and government authorities outside your country of residence; (d) to enforce our terms and conditions; (e) to protect our operations, business and systems; (f) to protect our rights, privacy, safety or property, and/or that of other users, including you; and (g) to allow us to pursue available remedies or limit the damages that we may sustain.
-• To subsidiaries or affiliates within our corporate family, to carry out regular business activities.
-Except for the third parties described above, to third parties only with your consent.
-International Transfer of Information Collected
-To facilitate our operation, we may transfer, store and process your Personal Data in jurisdictions other than where you live. Laws in these countries may differ from the laws applicable to your country of residence. When we do so, we will ensure that an adequate level of protection is provided for the information by using one or more of the following approaches:
+<p> Who do We Share Personal Data with? <br>
+At BTG IOT, we only share Personal Data in ways that we tell you about. We may share your Personal Data with the following recipients: <br>
+• To our third-party service providers who perform certain business-related functions for us, such as website hosting, data analysis, payment and credit card processing, infrastructure provision, IT services, customer support service, e-mail delivery services, and other similar services to enable them to provide services to us. <br>
+• To our customers and other business partners who provide you, directly or indirectly, with your Smart Devices, and/or networks and systems through which you access and use our Sites and Services. <br>
+• To an affiliate or other third party in the event of any reorganization, merger, sale, joint venture, assignment, transfer or other disposition of all or any portion of our business, assets or stock (including without limitation in connection with any bankruptcy or similar proceedings). In such an event, you will be notified via email and/or a prominent notice on our website of any change in ownership, incompatible new uses of your Personal Data, and choices you may have regarding your Personal Data. <br>
+• As we believe to be necessary or appropriate: (a) to comply with applicable laws and regulations; (b) to comply with legal process; (c) to respond to requests from public and government authorities, including public and government authorities outside your country of residence; (d) to enforce our terms and conditions; (e) to protect our operations, business and systems; (f) to protect our rights, privacy, safety or property, and/or that of other users, including you; and (g) to allow us to pursue available remedies or limit the damages that we may sustain. <br>
+• To subsidiaries or affiliates within our corporate family, to carry out regular business activities. <br>
+Except for the third parties described above, to third parties only with your consent. <br>
+International Transfer of Information Collected <br>
+To facilitate our operation, we may transfer, store and process your Personal Data in jurisdictions other than where you live. Laws in these countries may differ from the laws applicable to your country of residence. When we do so, we will ensure that an adequate level of protection is provided for the information by using one or more of the following approaches: <br>
 • an agreement on the basis of approved EU standard contractual clauses per GDPR Art. 46. For more information, see here: https://ec.europa.eu/info/law/law-topic/data-protection/data-transfers-outside-eu/model-contracts-transfer-personal-data-third-countries_en. </p>
 
-<p> If you would like further detail on the safeguards we have in place, you can contact us directly as described in this Privacy Policy.
-Your Rights Relating to Your Personal Data
-We respect your rights and control over your Personal Data. You may exercise any of the following rights:
-• Via the “Profile – Personal Center” in our Products (for Product version 3.2 and later)
-• By emailing us at support@bolideco.com (for Product version before 3.2)
-You do not have to pay a fee and we will aim to respond you within 30 days. If you decide to email us, in your request, please make clear what information you would like to have changed, whether you would like to have your Personal Data deleted from our database or otherwise let us know what limitations you would like to put on our use of your Personal Data. Please note that we may ask you to verify your identity before taking further action on your request, for security purposes.
-You may:
-• Request access to the Personal Data that we process about you;
-• Request that we correct inaccurate or incomplete Personal Data about you;
-• Request deletion of Personal Data about you;
-• Request restrictions, temporarily or permanently, on our processing of some or all Personal Data about you;
-• Request transfer of Personal Data to you or a third party where we process the data based on your consent or a contract with you, and where our processing is automated; and
+<p> If you would like further detail on the safeguards we have in place, you can contact us directly as described in this Privacy Policy. <br>
+Your Rights Relating to Your Personal Data <br>
+We respect your rights and control over your Personal Data. You may exercise any of the following rights: <br>
+• Via the “Profile – Personal Center” in our Products (for Product version 3.2 and later) <br>
+• By emailing us at support@bolideco.com (for Product version before 3.2) <br>
+You do not have to pay a fee and we will aim to respond you within 30 days. If you decide to email us, in your request, please make clear what information you would like to have changed, whether you would like to have your Personal Data deleted from our database or otherwise let us know what limitations you would like to put on our use of your Personal Data. Please note that we may ask you to verify your identity before taking further action on your request, for security purposes. <br>
+You may: <br>
+• Request access to the Personal Data that we process about you; <br>
+• Request that we correct inaccurate or incomplete Personal Data about you; <br>
+• Request deletion of Personal Data about you; <br>
+• Request restrictions, temporarily or permanently, on our processing of some or all Personal Data about you; <br>
+• Request transfer of Personal Data to you or a third party where we process the data based on your consent or a contract with you, and where our processing is automated; and <br>
 • Opt-out or object to our use of Personal Data about you where our use is based on your consent or our legitimate interests. </p>
 
-<p> Security
-We use commercially reasonable physical, administrative, and technical safeguards to preserve the integrity and security of your Personal Data. BTG IOT provides various security strategies to effectively ensure data security of user and device. As for device access, BTG IOT proprietary algorithms are employed to ensure data isolation, access authentication, applying for authorization. As for data communication, communication using security algorithms and transmission encryption protocols and commercial level information encryption transmission based on dynamic keys are supported. As for data processing, strict data filtering and validation and complete data audit are applied. As for data storage, all confidential information of users will be safely encrypted for storage. If you have reason to believe that your interaction with us is no longer secure (for example, if you feel that the security of any account you might have with us has been compromised), you could immediately notify us of the problem by emailing support@bolideco.com
-Data Retention
-We process your Personal Data for the minimum period necessary for the purposes set out in this Privacy Policy, unless there is a specific legal requirement for us to keep the data for a longer retention period. We determine the appropriate retention period based on the amount, nature, and sensitivity of your Personal Data, and after the retention period ends, we will destruct your Personal Data. When we are unable to do so for technical reasons, we will ensure that appropriate measures are put in place to prevent any further such use of your Personal Data.
-Dispute Resolution
-If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact our U.S.-based third-party dispute resolution provider (free of charge) at https://feedback-form.truste.com/watchdog/request.
-Changes to this Policy Policy
-We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes we will notify you by email (send to the e-mail address specified in your account) or by means of a notice in the mobile applications prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices.
-Contact Us
-If you have any questions about our practices or this Privacy Policy, please contact us as follows:
-BTG iOT Inc.
+<p> Security <br>
+We use commercially reasonable physical, administrative, and technical safeguards to preserve the integrity and security of your Personal Data. BTG IOT provides various security strategies to effectively ensure data security of user and device. As for device access, BTG IOT proprietary algorithms are employed to ensure data isolation, access authentication, applying for authorization. As for data communication, communication using security algorithms and transmission encryption protocols and commercial level information encryption transmission based on dynamic keys are supported. As for data processing, strict data filtering and validation and complete data audit are applied. As for data storage, all confidential information of users will be safely encrypted for storage. If you have reason to believe that your interaction with us is no longer secure (for example, if you feel that the security of any account you might have with us has been compromised), you could immediately notify us of the problem by emailing support@bolideco.com <br>
+Data Retention <br>
+We process your Personal Data for the minimum period necessary for the purposes set out in this Privacy Policy, unless there is a specific legal requirement for us to keep the data for a longer retention period. We determine the appropriate retention period based on the amount, nature, and sensitivity of your Personal Data, and after the retention period ends, we will destruct your Personal Data. When we are unable to do so for technical reasons, we will ensure that appropriate measures are put in place to prevent any further such use of your Personal Data. <br>
+Dispute Resolution <br>
+If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact our U.S.-based third-party dispute resolution provider (free of charge) at https://feedback-form.truste.com/watchdog/request. <br>
+Changes to this Policy Policy <br>
+We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes we will notify you by email (send to the e-mail address specified in your account) or by means of a notice in the mobile applications prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices. <br>
+Contact Us <br>
+If you have any questions about our practices or this Privacy Policy, please contact us as follows: <br>
 
-Email: support@bolideco.com
+Email: support@bolideco.com <br>
 
-For European Union data subject, you have the right to lodge a complaint with a supervisory authority concerning BTG IOT’s data processing activities. For questions, or to exercise your rights as an EU data subject, please contact our EU Representative here:
-Name: Data Protection Representative
+For European Union data subject, you have the right to lodge a complaint with a supervisory authority concerning BTG IOT’s data processing activities. For questions, or to exercise your rights as an EU data subject, please contact our EU Representative here: <br>
+Name: Data Protection Representative <br>
   Email: support@bolideco.com </p>
 
