--- a/test.html
+++ b/test.html
@@ -43,8 +43,9 @@ International Transfer of Information Collected <br>
 To facilitate our operation, we may transfer, store and process your Personal Data in jurisdictions other than where you live. Laws in these countries may differ from the laws applicable to your country of residence. When we do so, we will ensure that an adequate level of protection is provided for the information by using one or more of the following approaches: <br>
 • an agreement on the basis of approved EU standard contractual clauses per GDPR Art. 46. For more information, see here: https://ec.europa.eu/info/law/law-topic/data-protection/data-transfers-outside-eu/model-contracts-transfer-personal-data-third-countries_en. </p>
 
-<p> If you would like further detail on the safeguards we have in place, you can contact us directly as described in this Privacy Policy. <br>
-Your Rights Relating to Your Personal Data <br>
+<p> If you would like further detail on the safeguards we have in place, you can contact us directly as described in this Privacy Policy. </p>
+
+<p> Your Rights Relating to Your Personal Data <br>
 We respect your rights and control over your Personal Data. You may exercise any of the following rights: <br>
 • Via the “Profile – Personal Center” in our Products (for Product version 3.2 and later) <br>
 • By emailing us at support@bolideco.com (for Product version before 3.2) <br>
@@ -58,18 +59,22 @@ You may: <br>
 • Opt-out or object to our use of Personal Data about you where our use is based on your consent or our legitimate interests. </p>
 
 <p> Security <br>
-We use commercially reasonable physical, administrative, and technical safeguards to preserve the integrity and security of your Personal Data. BTG IOT provides various security strategies to effectively ensure data security of user and device. As for device access, BTG IOT proprietary algorithms are employed to ensure data isolation, access authentication, applying for authorization. As for data communication, communication using security algorithms and transmission encryption protocols and commercial level information encryption transmission based on dynamic keys are supported. As for data processing, strict data filtering and validation and complete data audit are applied. As for data storage, all confidential information of users will be safely encrypted for storage. If you have reason to believe that your interaction with us is no longer secure (for example, if you feel that the security of any account you might have with us has been compromised), you could immediately notify us of the problem by emailing support@bolideco.com <br>
-Data Retention <br>
-We process your Personal Data for the minimum period necessary for the purposes set out in this Privacy Policy, unless there is a specific legal requirement for us to keep the data for a longer retention period. We determine the appropriate retention period based on the amount, nature, and sensitivity of your Personal Data, and after the retention period ends, we will destruct your Personal Data. When we are unable to do so for technical reasons, we will ensure that appropriate measures are put in place to prevent any further such use of your Personal Data. <br>
-Dispute Resolution <br>
-If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact our U.S.-based third-party dispute resolution provider (free of charge) at https://feedback-form.truste.com/watchdog/request. <br>
-Changes to this Policy Policy <br>
-We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes we will notify you by email (send to the e-mail address specified in your account) or by means of a notice in the mobile applications prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices. <br>
-Contact Us <br>
+We use commercially reasonable physical, administrative, and technical safeguards to preserve the integrity and security of your Personal Data. BTG IOT provides various security strategies to effectively ensure data security of user and device. As for device access, BTG IOT proprietary algorithms are employed to ensure data isolation, access authentication, applying for authorization. As for data communication, communication using security algorithms and transmission encryption protocols and commercial level information encryption transmission based on dynamic keys are supported. As for data processing, strict data filtering and validation and complete data audit are applied. As for data storage, all confidential information of users will be safely encrypted for storage. If you have reason to believe that your interaction with us is no longer secure (for example, if you feel that the security of any account you might have with us has been compromised), you could immediately notify us of the problem by emailing support@bolideco.com </p>
+
+<p> Data Retention <br>
+We process your Personal Data for the minimum period necessary for the purposes set out in this Privacy Policy, unless there is a specific legal requirement for us to keep the data for a longer retention period. We determine the appropriate retention period based on the amount, nature, and sensitivity of your Personal Data, and after the retention period ends, we will destruct your Personal Data. When we are unable to do so for technical reasons, we will ensure that appropriate measures are put in place to prevent any further such use of your Personal Data. </p>
+
+<p> Dispute Resolution <br>
+If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact our U.S.-based third-party dispute resolution provider (free of charge) at https://feedback-form.truste.com/watchdog/request. </p>
+
+<p> Changes to this Policy Policy <br>
+We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes we will notify you by email (send to the e-mail address specified in your account) or by means of a notice in the mobile applications prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices. </p>
+
+<p> Contact Us <br>
 If you have any questions about our practices or this Privacy Policy, please contact us as follows: <br>
-
+<br>
 Email: support@bolideco.com <br>
-
+<br>
 For European Union data subject, you have the right to lodge a complaint with a supervisory authority concerning BTG IOT’s data processing activities. For questions, or to exercise your rights as an EU data subject, please contact our EU Representative here: <br>
 Name: Data Protection Representative <br>
   Email: support@bolideco.com </p>
